Clean CSS, remove float and absolute position, now images are inline. Fix issue: http://wordpress.org/support/topic/vertical-align-when-using-mouseover-image
git-svn-id: http://plugins.svn.wordpress.org/menu-image/trunk@920964 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/menu-image.css
+++ b/menu-image.css
@@ -2,38 +2,21 @@
     border: none;
     box-shadow: none;
     vertical-align: middle;
+    width: auto;
 }
-.menu-item a .menu-image-hover-wrapper {
-    display: block;
-    overflow: hidden;
-}
-.menu-item a .menu-image-hover-wrapper,
-.menu-item a .menu-image-hover-wrapper img {
-    float: left;
-}
-.menu-item a.menu-image-hovered .menu-image-hover-wrapper img.hovered-image,
-.menu-item a.menu-image-hovered:hover .menu-image-hover-wrapper img.menu-image {
+.menu-item a.menu-image-hovered img.hovered-image,
+.menu-item a.menu-image-hovered:hover img.menu-image {
     opacity: 0;
+    transition: opacity 0.25s ease-in-out 0s;
 }
-.menu-item a.menu-image-hovered:hover .menu-image-hover-wrapper img.hovered-image {
+.menu-item a.menu-image-hovered:hover img.hovered-image {
     opacity: 1;
 }
-.menu-item a.menu-image-title-hide .menu-image-hover-wrapper,
-.menu-item a.menu-image-title-before .menu-image-hover-wrapper {
-    vertical-align: top;
-    display: inline-block;
-    float: none;
-}
-.menu-item a.menu-image-title-after img,
+.menu-item a.menu-image-title-after.menu-image-not-hovered img,
 .menu-item a.menu-image-hovered.menu-image-title-after .menu-image-hover-wrapper {
     padding-right: 10px;
 }
-.menu-item a.menu-image-title-before img,
+.menu-item a.menu-image-title-before.menu-image-not-hovered img,
 .menu-item a.menu-image-hovered.menu-image-title-before .menu-image-hover-wrapper {
     padding-left: 10px;
-}
-.menu-item a .menu-image-hover-wrapper img {
-    padding: 0;
-    position: absolute;
-    transition: opacity 0.25s ease-in-out 0s;
 }
